tests/ui/typeck/consider-borrowing-141810-1.stderr
error[E0308]: `if` and `else` have incompatible types
  --> $DIR/consider-borrowing-141810-1.rs:5:9
   |
LL |       let x = if true {
   |  _____________-
LL | |         &true
   | |         ----- expected because of this
LL | |     } else if false {
LL | |         true
   | |         ^^^^ expected `&bool`, found `bool`
...  |
LL | |         true
LL | |     };
   | |_____- `if` and `else` have incompatible types
   |
help: consider borrowing here
   |
LL |         &true
   |         +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
